Fixed flip card angle and X axis misalign, more button styling

--- a/cards.css
+++ b/cards.css
@@ -3,11 +3,9 @@ body {
   /* font-family: monospace; */
 }
 
- .poses-div {
-  margin: 2rem;
-}
 
- .button {
+
+ /* .button {
   background-color: #000080;
   color: white;
   font-family: monospace;
@@ -16,20 +14,10 @@ body {
   font-size: 20px;
   font-family: "Papyrus"
   text-align: center;
-}
-
-
-/* .card{
-  text-align: center;
-  padding: 1rem;
-  width: 15rem;
-  height: 25rem;
-  display: inline-grid;
-  margin: 1rem 2rem;
-  box-shadow: 3px 4px #87CEFA;
-  background-color: #F0F8FF;
-  color: #000080;
 } */
+
+
+
 
  img {
   max-width:215px;
@@ -42,18 +30,33 @@ body {
 }
 
 
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+/* The flip card container 
+- set the width and height to whatever you want. 
+We have added the border property to demonstrate that 
+the flip itself goes out of the box on hover 
+(remove perspective if you don't want the 3D effect */
 
 /* .poses-div { */
+
+  .poses-div {
+    margin: 1rem;
+
+  }
+
+
 .flip-card{
   background-color: transparent;
   width: 100%;
-  height: 110vh;
-  /* border: 1px solid #f1f1f1; */
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  /* height: 110vh; */
+  min-height: 390vh;
 
-  display: grid;
+  /* border: 1px solid #f1f1f1; */
+  /* Remove this if you don't want the 3D effect  
+  Now cards flip smoothly and not w weird angle! */
+  /* perspective: 1200px;  */
   grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  
     /* grid-column-gap: 50px; */
 
 }
@@ -71,7 +74,7 @@ body {
 .flip-card-inner:hover  {
   transform: rotateY(180deg);
   transform-origin: 50% 100% 0;
-  transition: transform 0.8s;
+  transition: transform 0.6s;
   transform-style: preserve-3d;
 }
 
@@ -111,5 +114,8 @@ body {
   box-shadow: 3px 4px #87CEFA;
   background-color: #F0F8FF;
   color: #000080;
-  transform: rotateY(180deg);
+  /* transform: translateX(-10px) rotateY(180deg); */
+  transform: translateX(6px) rotateY(180deg);
+  /* translate3d(x,y,z) */
+  
 }
