--- a/index.css
+++ b/index.css
@@ -4,12 +4,18 @@
     display: flex;
     justify-content: space-between;
     color: #FFFFFF;
-    border: 1px solid #555;
-    background-color: #000080;
+    border: 1px solid #0792b5;
+    background-color: #9bc2cf;
+    /* background-color: #02a6cf; */
+    /* #000080; */
     font-family: "Papyrus";
     height: 7rem;
-    padding: 2rem;
+    padding: 1.4rem;
     font-size: 10px;
+}
+
+.title{
+  padding-top: .8rem;
 }
 
 
@@ -24,17 +30,26 @@ form {
 
 .nav-button {
     display: right;
-    border-radius: 25px;
+    border-radius: 10px;
+    /* margin-top: 1.5em;  Aligns whole button, nope!*/
+    padding: 5px;
     height: 70px;
     width: 130px;
-    background-color:	red;
+    background-color: #8aacb8;
     color: 	#FFFFFF;
-    font-family: "Papyrus";
+    /* font-family: "Papyrus"; */
     font-size: 12px;
     text-align: center;
-    border: #FFFFFF;
+    border: 1px #fffede;
+    margin-right: 5px;
+
 }
 
+.nav-button:hover {
+  background-color: #7997a1; /* Green */
+  opacity: 0.9;
+  box-shadow: 0 6px 8px 0 rgba(0,0,0,0.19), 0 8px 25px 0 rgba(0,0,0,0.14);
+}
 
 
  /* USE for LIs: */
